# bot-binance

./: .gitignore  deploy.sh  launcher.py  main.py  pyproject.toml
study_and_analysis/notebooks/: teste_funcoes_screener.ipynb
study_and_analysis/screener/: __init__.py  screener.py  screening.toml
tests/: exchange_connect.ipynb
usdm_futures/: __init__.py
usdm_futures/robot/: __init__.py
usdm_futures/robot/controllers/: __init__.py  state_chief.py
usdm_futures/robot/orders/: __init__.py  manage_orders.py  order_utils.py
usdm_futures/robot/pipeline/: __init__.py
usdm_futures/robot/pipeline/fetch_data/: __init__.py  csv_storage.py  data_pipeline.py  source.py  transform.py
usdm_futures/robot/strategies/: __init__.py  base.py  double_mean.py
usdm_futures/shared/: __init__.py
usdm_futures/shared/connection/: __init__.py  client.py
usdm_futures/shared/env/: schedule.env
usdm_futures/shared/error/: __init__.py  cmc_exceptions.py  exceptions.py
usdm_futures/shared/indicators/: __init__.py  t_analisys.py
usdm_futures/shared/logging/: __init__.py  logger.py
usdm_futures/shared/reports/: __init__.py  trade_reporter.py
usdm_futures/shared/utils/: __init__.py  helpers.py  market_hours.py  paths.py
usdm_futures/shared/validator/: __init__.py  schedule.py  screening_params.py  secrets.py  symbol_config.py
